objects/Accounting_Line__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>PCORS Application</description>
        <label>Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Code__c</fullName>
        <description>PCORS Application</description>
        <label>App Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Org_Code__c</fullName>
        <description>PCOR. Created to capture 'Budget Org Code'</description>
        <inlineHelpText>Please enter the 'Budget Org Code' for the order request.</inlineHelpText>
        <label>Budget Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calender_Year__c</fullName>
        <description>FTTA License. Created to capture the input from the user.</description>
        <inlineHelpText>Enter the 'Calender Year' in the format YYYY.</inlineHelpText>
        <label>Calendar Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>FTTA License. Created to capture the comments from the user for the royalties information.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Org__c</fullName>
        <description>PCORS Application</description>
        <label>Cost Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCN_Number__c</fullName>
        <description>PCORS Application.</description>
        <label>DCN Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPA License</label>
        <referenceTo>EPA_Agreement__c</referenceTo>
        <relationshipLabel>Royalties</relationshipLabel>
        <relationshipName>Royalties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCO_Notes__c</fullName>
        <description>PCOR Application. Created to capture the notes from the funding official..</description>
        <inlineHelpText>Please enter the comments for the funding items.</inlineHelpText>
        <label>FCO Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>PCORS Application</description>
        <label>Budget Fiscal Year(s)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <description>PCORS Application</description>
        <label>Fund/ Appropriation Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Code__c</fullName>
        <description>PCORS Application</description>
        <label>IT Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Class__c</fullName>
        <description>PCORS Application</description>
        <label>Object Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oraganization_Code__c</fullName>
        <description>PCORS Application</description>
        <label>Organization Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PCORS Application</description>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>Funding</relationshipLabel>
        <relationshipName>FundingInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRC__c</fullName>
        <description>PCORS Application</description>
        <label>PRC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>FTTA License. Created to capture the payment amount assigned to the royalties.</description>
        <label>Payment Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>FTTA License. Created to capture the payment date input from the user.</description>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <description>FTTA License. Created to capture 'Payment Due Date'</description>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <description>FTTA License. Created to capture the payment number input from the user.</description>
        <label>Payment Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>FTTA License. Created to capture the payment type input from the user.</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERI</fullName>
                </value>
                <value>
                    <fullName>Annual Minimum</fullName>
                </value>
                <value>
                    <fullName>Up Front Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Ending__c</fullName>
        <description>FTTA License. Created to capture the 'Period Ending Field'.</description>
        <label>Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>PCORS Application</description>
        <label>Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Received__c</fullName>
        <description>FTTA Application</description>
        <label>Report Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <description>PCORS Application</description>
        <label>SFO</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Project__c</fullName>
        <description>PCORS Application</description>
        <label>Site/ Project/ IT Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <description>Detailed financial line of accounting, first used in DCR &amp; PCORS applications.  Similar to Line Items, but more oriented toward providing financial details, e.g., commitments, obligations, &amp; payments detail lines associated with a financial document.</description>
    <label>Accounting Line</label>
    <nameField>
        <displayFormat>EPA-AL-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Lines</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FTTA_License_Royalties</fullName>
        <columns>NAME</columns>
        <columns>EPA_License__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Payment_Number__c</columns>
        <columns>Payment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accounting_Line__c.FTTA_Royalties</value>
        </filters>
        <label>FTTA License Royalties</label>
    </listViews>
    <listViews>
        <fullName>PCORS_Funding</fullName>
        <columns>NAME</columns>
        <columns>DCN_Number__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Accounting_Line__c.PCORS_Funding</value>
        </filters>
        <label>PCORS Funding</label>
    </listViews>
    <recordTypes>
        <fullName>FTTA_Royalties</fullName>
        <active>true</active>
        <label>FTTA Royalties</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCORS_Funding</fullName>
        <active>true</active>
        <label>PCORS Funding</label>
    </recordTypes>
    <validationRules>
        <fullName>Validate_FTTA_Calender_Year</fullName>
        <active>false</active>
        <description>FTTA Application - Royalties.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName ='',
NOT(ISBLANK( Calender_Year__c)),
NOT(REGEX(Calender_Year__c,"[0-9]{4}"))
)</errorConditionFormula>
        <errorDisplayField>Calender_Year__c</errorDisplayField>
        <errorMessage>Invalid Year : Enter in the format YYYY.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Funding_Fiscal_Year</fullName>
        <active>true</active>
        <description>PCOR Application. Created to validate the fiscal years.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName =='PCORS_Funding',
NOT(ISBLANK( Fiscal_Year__c )),
NOT(REGEX(Fiscal_Year__c ,"[0-9- ]{2,9}"))
)</errorConditionFormula>
        <errorDisplayField>Fiscal_Year__c</errorDisplayField>
        <errorMessage>Invalid Budget Fiscal Year(s).</errorMessage>
    </validationRules>
</CustomObject>